[package]
name = "one_bit_jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Link time optimizations for release
[profile.release]
lto = "thin"

[dependencies]
bevy = "0.12.0"
bevy_ldtk = "0.5.0"
wasm-server-runner = "0.4.0"
console_error_panic_hook = "0.1"