[package]
name = "one_bit_jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Link time optimizations for release
[profile.release]
lto = "thin"

[dependencies]
bevy = "0.11.0"
console_error_panic_hook = "0.1"
bevy_derive = "0.10.0"
bevy_reflect_derive = "0.10.0"
bevy_ecs_ldtk = "0.8.0"
bevy_rapier2d = {version = "0.22.0", features = ["wasm-bindgen", "debug-render-2d"]}
benimator = "4.1.3"